--- a/src/components/ui/PomodoroMiniIndicator/PomodoroMiniIndicator.module.css
+++ b/src/components/ui/PomodoroMiniIndicator/PomodoroMiniIndicator.module.css
@@ -5,11 +5,16 @@
   right: 15px;
   z-index: 1000;
   cursor: pointer;
-  transition: transform 0.3s ease;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.container.visible {
+  opacity: 1;
 }
 
 /* Tamaños */
