fix(DragOverlayView): fix adjustForLayoutPadding --safe-area-inset value

--- a/src/app/alino-app/AlinoAppLayout.module.css
+++ b/src/app/alino-app/AlinoAppLayout.module.css
@@ -1,7 +1,7 @@
 .alinoAppLayoutContainer {
   position: relative;
-  height: 100svh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: var(--background-alino-app);
   padding: 15px;
   overflow: hidden;
@@ -26,7 +26,6 @@
 
 @media all and (display-mode: standalone) {
   .alinoAppLayoutContainer {
-    height: 100vh;
     overflow: visible;
     padding: calc(env(safe-area-inset-top) + 15px) 15px
       calc(env(safe-area-inset-bottom) + 15px) 15px;
